vuejs/vuejs-tests/testData/highlighting/pseudoSelectors/pseudoSelectors.vue
<style lang="scss">
    div::<weak_warning descr="v-deep is deprecated, consult docs for better alternative">v-deep</weak_warning>::<error descr="Unknown pseudo selector 'v-incorrect'">v-incorrect</error> {}
</style  >